# stora

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
stora-backend/: .env.example  Dockerfile  alembic.ini  diagram.md  pyproject.toml  requirements.txt
stora-backend/alembic/: env.py
stora-backend/alembic/versions/: a3ba61a73b22_initial_schema.py  b4e72c9d1f35_add_image_url_to_products_and_combo_items.py
stora-backend/app/: __init__.py  config.py  database.py  main.py
stora-backend/app/auth/: __init__.py  dependencies.py  security.py
stora-backend/app/crud/: __init__.py  appointment.py  combo_item.py  invitation.py  membership.py  order.py  plan.py  product.py  tenant.py  user.py
stora-backend/app/models/: __init__.py  appointment.py  combo_item.py  invitation.py  membership.py  order.py  plan.py  product.py  tenant.py  user.py
stora-backend/app/routers/: __init__.py  appointments.py  auth.py  combo_items.py  invitations.py  memberships.py  orders.py  plans.py  products.py  tenants.py  users.py
stora-backend/app/schemas/: __init__.py  appointment.py  auth.py  combo_item.py  invitation.py  membership.py  order.py  plan.py  product.py  tenant.py  user.py
stora-backend/tests/: __init__.py  conftest.py  test_auth.py  test_combo_items.py  test_health.py  test_invitations.py  test_memberships_orders.py  test_plans.py  test_products.py  test_tenants.py  test_users.py
