# ──────────────────────────────────────────────────────────────
# Stora Backend – Project Configuration
#
# Managed by uv (https://docs.astral.sh/uv/).
# ──────────────────────────────────────────────────────────────

[project]
name = "stora-backend"
version = "0.1.0"
description = "Backend API for the Stora SaaS e-commerce and appointment management platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",

    # Database ORM and async driver
    "sqlalchemy==2.0.36",
    "asyncpg==0.30.0",

    # Migrations
    "alembic==1.14.1",

    # Data validation (bundled with FastAPI, pinned for clarity)
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",

    # Authentication
    "python-jose[cryptography]==3.4.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.1.3",
    "python-multipart==0.0.22",

    # Utilities
    "email-validator==2.2.0",
]

[dependency-groups]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "httpx==0.28.1",
    "aiosqlite==0.20.0",
    "ruff==0.9.7",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
